[project]
name = "fustor-benchmark"
version = "1.0.0"
description = "Benchmark toolkit for Fustor fs-meta HTTP v1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7",
  "requests>=2.31.0",
]

[[project.authors]]
name = "Huajin Wang"
email = "wanghuajin999@163.com"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
fustor-benchmark = "capanix_benchmark.cli:cli"
benchmark-data-generator = "capanix_benchmark.benchmark_data_generator:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
capanix_benchmark = ["query_template.html"]
